Adding new samples, benchmarks, and tests to the suite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,35 @@
+##############################################################################
+#   
+#
+#  This file is part of qlxad, an adaptor module to enable using XAD with
+#  QuantLib. XAD is a fast and comprehensive C++ library for
+#  automatic differentiation.
+#
+#  Copyright (C) 2010-2023 Xcelerit Computing Ltd.
+#
+#  This program is free software: you can redistribute it and/or modify
+#  it under the terms of the GNU Affero General Public License as published
+#  by the Free Software Foundation, either version 3 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU Affero General Public License for more details.
+#
+#  You should have received a copy of the GNU Affero General Public License
+#  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#   
+##############################################################################
+
+option(QLXAD_DISABLE_AAD "Disable using XAD for QuantLib's Real, allowing to run samples with double" OFF)
+
 add_subdirectory(ql)
 if(MSVC)
 	set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif()
 add_subdirectory(Examples)
-add_subdirectory(test-suite)
+if(NOT QLXAD_DISABLE_AAD)
+    # the test suite is not supporting double
+	add_subdirectory(test-suite)
+endif()
