--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -224,7 +224,7 @@ jobs:
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2.5
       with:
-        key: linux-std-${{ matrix.disable_aad }}
+        key: linux-std-classes
         max-size: 650M
     - name: Configure
       run: |
