--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,6 +63,22 @@ jobs:
       with:
         key: linux-${{ matrix.disable_aad }}
         max-size: 650M
+    - name: Configure
+      run: |
+        rm -rf ${{ github.workspace }}/install
+        cd QuantLib
+        mkdir build
+        cd build
+        cmake -G Ninja -DBOOST_ROOT=/usr \
+          -DCMAKE_CXX_STANDARD=${{ matrix.cxx }} \
+          -DQLRISKS_DISABLE_AAD=${{ matrix.disable_aad }} \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
+          -DQL_EXTERNAL_SUBDIRECTORIES="${{ github.workspace }}/xad;${{ github.workspace }}/QuantLib-Risks-Cpp" \
+          -DQL_EXTRA_LINK_LIBRARIES=QuantLib-Risks \
+          -DQL_NULL_AS_FUNCTIONS=ON \
+          -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/install \
+          ..
     - name: Compile
       run: |
         cd QuantLib/build
