--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,10 +63,13 @@ jobs:
       with:
         key: linux-${{ matrix.disable_aad }}
         max-size: 650M
+    - name: Setup
+      run: |
+        sudo apt-get update
+        apt-get install -y ninja-build
     - name: Configure
       run: |
         rm -rf ${{ github.workspace }}/install
-        apt-get install -y ninja-build
         cd QuantLib
         mkdir build
         cd build
