--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,6 +70,10 @@ jobs:
         && DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential wget libbz2-dev autoconf automake libtool ccache cmake clang git \
         && apt-get clean \
         && rm -rf /var/lib/apt/lists/*
+    - name: GitHub WS Tmp
+        # https://github.com/actions/runner/issues/2058
+      run: |
+          echo "GITHUB_WORKSPACE=$GITHUB_WORKSPACE" >> $GITHUB_ENV
     - name: Configure
       run: |
         rm -rf ${{ github.workspace }}/install
