--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,7 @@ jobs:
     - name: Setup
       run: |
         apt-get update \
-        && apt install -y libboost-dev ccache ninja-build
+        && apt install -y ccache ninja-build
     - name: Configure
       run: |
         rm -rf ${{ github.workspace }}/install
@@ -78,10 +78,10 @@ jobs:
           -DQLRISKS_DISABLE_AAD=${{ matrix.disable_aad }} \
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
-          -DQL_EXTERNAL_SUBDIRECTORIES="${{ github.workspace }}/xad;${{ github.workspace }}/QuantLib-Risks-Cpp" \
+          -DQL_EXTERNAL_SUBDIRECTORIES="$(pwd)/xad;$(pwd)/QuantLib-Risks-Cpp" \
           -DQL_EXTRA_LINK_LIBRARIES=QuantLib-Risks \
           -DQL_NULL_AS_FUNCTIONS=ON \
-          -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/install \
+          -DCMAKE_INSTALL_PREFIX=$(pwd)/install \
           ..
     - name: Compile
       run: |
