--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -337,8 +337,8 @@ jobs:
         path: QuantLib-Risks-Cpp
     - name: Setup
       run: |
-        sudo apt-get update \
-        && sudo apt install -y ccache ninja-build \
+        apt-get update \
+        && apt install -y ccache ninja-build \
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2.12
       with:
